[project]
name = "comfyui-colorwheel"
description = ""
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["torch==2.4.1", "numpy==1.26.4", "pillow==10.4.0", "scikit-learn==1.5.2"]

[project.urls]
Repository = "https://github.com/RhizoNymph/ComfyUI-ColorWheel"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-ColorWheel"
Icon = ""
